--- a/index.HTML
+++ b/index.HTML
@@ -121,7 +121,7 @@
             position: relative;
             margin: auto;
             box-shadow: 0 0 30px #002d6a, 0 0 20px #002d6a inset;
-            max-width: 100%; /* Ensure the container adjusts to the viewport */
+            max-width: 100vw; /* Adjusted width to occupy full viewport width */
             height: auto; /* Allow the container to adjust its height based on content */
         }
 
