--- a/index.HTML
+++ b/index.HTML
@@ -115,16 +115,21 @@
             border-bottom: 1px solid #00357b;
         }
 
-        .round-container {
-            border-radius: 10px;
-            overflow: hidden;
-            position: relative;
-            margin: auto;
-            box-shadow: 0 0 30px #002d6a, 0 0 20px #002d6a inset;
-            max-width: 100vw; /* Adjusted width to occupy full viewport width */
-            height: auto; /* Allow the container to adjust its height based on content */
-        }
-
+      .round-container {
+    border-radius: 10px;
+    overflow: hidden;
+    position: relative;
+    margin: auto;
+    box-shadow: 0 0 30px #002d6a, 0 0 20px #002d6a inset;
+    width: 100%; /* Adjusted width to fit the screen */
+    max-width: 100%; /* Ensure the container adjusts to the viewport */
+    height: auto; /* Allow the container to adjust its height based on content */
+}
+@media screen and (min-width: 769px) {
+    .round-container {
+        width: 70%; /* Adjusted width for larger screens */
+    }
+}
         .background-video {
             width: auto;
             height: 80vh;
