--- a/index.HTML
+++ b/index.HTML
@@ -70,26 +70,27 @@
             height: auto;
         }
 
-        .container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            min-height: 70vh;
-            width: 70%; /* Initial width */
-            margin: 0 auto;
-            overflow: hidden;
-            position: relative;
-            padding: 10px;
-            padding-right: 37px;
-        }
+     .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-height: 70vh;
+    width: 100%; /* Adjusted width to fit the screen */
+    margin: 0 auto;
+    overflow: hidden;
+    position: relative;
+    padding: 10px;
+    padding-right: 37px;
+}
 
-        @media screen and (max-width: 768px) {
-            .container {
-                width: 100%; /* Adjust to occupy full width on smaller screens */
-                padding: 10px; /* Adjust padding if needed */
-                justify-content: center; /* Center content vertically */
-            }
-        }
+@media screen and (min-width: 769px) {
+    .container {
+        width: 70%; /* Adjusted width for larger screens */
+    }
+    .round-container {
+        width: 100%; /* Adjusted width for larger screens */
+    }
+}
 
         .container::before {
             content: "";
