--- a/index.HTML
+++ b/index.HTML
@@ -116,14 +116,14 @@
             border-bottom: 1px solid #00357b;
         }
 
-     .round-container {
+.round-container {
     border-radius: 10px;
     overflow: hidden;
     position: relative;
     margin: auto;
     box-shadow: 0 0 30px #002d6a, 0 0 20px #002d6a inset;
     width: 100%; /* Adjusted width to fit the screen */
-    max-width: 70%; /* Limiting maximum width on larger screens */
+    max-width: 100%; /* Make sure it doesn't exceed screen width */
     height: auto; /* Allow the container to adjust its height based on content */
 }
 
