--- a/index.HTML
+++ b/index.HTML
@@ -105,16 +105,20 @@
             z-index: -1;
         }
 
-        .content {
-            background-color: #020d1e;
-            border-radius: 10px;
-            padding: 20px;
-            position: relative;
-            width: 70%;
-            height: 70%;
-            margin: auto;
-            border-bottom: 1px solid #00357b;
-        }
+   .content {
+    background-color: #020d1e;
+    border-radius: 10px;
+    position: relative;
+    width: 80%;
+    height: 60%;
+    margin: auto;
+    border-bottom: 1px solid #00357b;
+
+    /* Center horizontally and vertically */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 .round-container {
     border-radius: 10px;
