--- a/index.HTML
+++ b/index.HTML
@@ -136,16 +136,16 @@
         width: 70%; /* Adjusted width for larger screens */
     }
 }
-        .background-video {
-            width: auto;
-            height: 80vh;
-            max-width: none;
-            max-height: none;
-            object-fit: cover;
-            opacity: 0.3;
-            display: block;
-            margin: 0 auto;
-        }
+   .background-video {
+    width: 80%; /* Same width as .content */
+    height: 60%; /* Same height as .content */
+    max-width: none;
+    max-height: none;
+    object-fit: cover;
+    opacity: 0.3;
+    display: block;
+    margin: 0 auto;
+}
 
         .text {
             color: rgb(202, 225, 255);
