--- a/index.HTML
+++ b/index.HTML
@@ -136,9 +136,9 @@
         width: 70%; /* Adjusted width for larger screens */
     }
 }
-   .background-video {
-    width: 80%; /* Same width as .content */
-    height: 60%; /* Same height as .content */
+  .background-video {
+    width: 100%; /* Set width to match the main container */
+    height: 70vh; /* Set height to match the main container's height */
     max-width: none;
     max-height: none;
     object-fit: cover;
