--- a/index.HTML
+++ b/index.HTML
@@ -137,8 +137,8 @@
     }
 }
   .background-video {
-    width: 100%; /* Set width to match the main container */
-    height: 70vh; /* Set height to match the main container's height */
+    width: 80%; /* Set width to match the main container */
+    height: 60%; /* Set height to match the main container's height */
     max-width: none;
     max-height: none;
     object-fit: cover;
