--- a/index.HTML
+++ b/index.HTML
@@ -105,12 +105,12 @@
             z-index: -1;
         }
 
-   .content {
+  .content {
     background-color: #020d1e;
     border-radius: 10px;
     position: relative;
     width: 80%;
-    height: 60%;
+    height: 60vh; /* Set the same height as round-container */
     margin: auto;
     border-bottom: 1px solid #00357b;
 
@@ -128,23 +128,12 @@
     box-shadow: 0 0 30px #002d6a, 0 0 20px #002d6a inset;
     width: 100%; /* Adjusted width to fit the screen */
     max-width: 100%; /* Make sure it doesn't exceed screen width */
-    height: auto; /* Allow the container to adjust its height based on content */
+    height: 60vh; /* Set the same height as content */
 }
-
 @media screen and (min-width: 769px) {
     .round-container {
         width: 70%; /* Adjusted width for larger screens */
     }
-}
-  .background-video {
-    width: 80%; /* Set width to match the main container */
-    height: 60%; /* Set height to match the main container's height */
-    max-width: none;
-    max-height: none;
-    object-fit: cover;
-    opacity: 0.3;
-    display: block;
-    margin: 0 auto;
 }
 
         .text {
