--- a/index.HTML
+++ b/index.HTML
@@ -121,15 +121,14 @@
 }
 
 .round-container {
-    border-radius: 10px;
-    overflow: hidden;
-    position: relative;
-    margin: auto;
-    box-shadow: 0 0 30px #002d6a, 0 0 20px #002d6a inset;
-    width: 100%; /* Adjusted width to fit the screen */
-    max-width: 100%; /* Make sure it doesn't exceed screen width */
-    height: 60vh; /* Set the same height as content */
-}
+            border-radius: 10px;
+            overflow: hidden;
+            position: relative;
+            margin: auto;
+            box-shadow: 0 0 30px #002d6a, 0 0 20px #002d6a inset;
+            max-width: 100%; /* Ensure the container adjusts to the viewport */
+            height: auto; /* Allow the container to adjust its height based on content */
+        }
 @media screen and (min-width: 769px) {
     .round-container {
         width: 70%; /* Adjusted width for larger screens */
