--- a/index.HTML
+++ b/index.HTML
@@ -105,20 +105,16 @@
             z-index: -1;
         }
 
-  .content {
-    background-color: #020d1e;
-    border-radius: 10px;
-    position: relative;
-    width: 80%;
-    height: 60vh; /* Set the same height as round-container */
-    margin: auto;
-    border-bottom: 1px solid #00357b;
-
-    /* Center horizontally and vertically */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+.content {
+            background-color: #020d1e;
+            border-radius: 10px;
+            padding: 20px;
+            position: relative;
+            width: 100%;
+            height: 70%;
+            margin: auto;
+            border-bottom: 1px solid #00357b;
+        }
 
 .round-container {
             border-radius: 10px;
