--- a/index.HTML
+++ b/index.HTML
@@ -69,7 +69,16 @@
             max-width: 100%;
             height: auto;
         }
-
+  .background-video {
+            width: auto;
+            height: 80vh;
+            max-width: none;
+            max-height: none;
+            object-fit: cover;
+            opacity: 0.3;
+            display: block;
+            margin: 0 auto;
+        }
      .container {
     display: flex;
     flex-direction: column;
