--- a/index.HTML
+++ b/index.HTML
@@ -94,10 +94,19 @@
 
 @media screen and (min-width: 769px) {
     .container {
-        width: 50%; /* Adjusted width for larger screens */
+        width: 70%; /* Adjusted width for larger screens */
     }
     .round-container {
         width: 100%; /* Adjusted width for larger screens */
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .container {
+        width: 50%; /* Adjusted width for smaller screens */
+    }
+    .round-container {
+        width: 90%; /* Adjusted width for smaller screens */
     }
 }
 
