--- a/index.HTML
+++ b/index.HTML
@@ -32,11 +32,13 @@
         }
 
         /* Main logo styles */
-        .main-logo {
-            text-align: center;
-            margin-top: 50px; /* Added padding from the top */
-            margin-bottom: 20px;
-        }
+     .main-logo {
+    text-align: center;
+    margin-top: 50px; /* Added padding from the top */
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: center; /* Center horizontally */
+}
 
         .main-logo img {
             max-width: 100%;
