--- a/index.HTML
+++ b/index.HTML
@@ -50,6 +50,7 @@
         @media screen and (max-width: 768px) {
             .main-logo img {
                 width: 80%; /* Adjust as needed for smaller screens */
+padding-left: 10px;
             }
         }
 
