--- a/index.HTML
+++ b/index.HTML
@@ -274,6 +274,16 @@ padding-left: 10px;
     display: flex;
     align-items: center;
 }
+.image-container {
+    width: 20%; /* Adjust the width as needed */
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.image-container img {
+    width: 100%; /* Ensure the image fills its container */
+    height: auto; /* Maintain aspect ratio */
+}
         .footer-link:hover {
             color: #0070FE; /* Change color on hover */
         }
