--- a/index.HTML
+++ b/index.HTML
@@ -365,7 +365,7 @@ padding-left: 10px;
                             <span class="line line-left"></span>
                             <p class="normal-text">€8.95 + TAX/MO</p>
                             <span class="line line-right"></span>
-                            <div class="image-container">
+                            <div class="image-container"><br>
                                 <img src="img/4khdr.svg" alt="4khdr">
                             </div>
                         </div>
