--- a/index.HTML
+++ b/index.HTML
@@ -366,7 +366,7 @@ padding-left: 10px;
                             <p class="normal-text">€8.95 + TAX/MO</p>
                             <span class="line line-right"></span>
                             <div class="image-container"><br>
-                                <img src="img/4khdr.svg" alt="4khdr">
+                              <Br>  <img src="img/4khdr.svg" alt="4khdr">
                             </div>
                         </div>
                     </div>
