--- a/index.HTML
+++ b/index.HTML
@@ -364,7 +364,7 @@ padding-left: 10px;
     </style>
 </head>
 <body>
-       <div class="container">
+    <div class="container">
         <div class="main-logo">
             <img src="img/logo.svg" alt="Main Logo">
         </div>
@@ -377,11 +377,10 @@ padding-left: 10px;
                         <div class="normal-text-container">
                             <span class="line line-left"></span>
                             <p class="normal-text">€8.95 + TAX/MO</p>
-                            </div>
                             <span class="line line-right"></span>
-
-<div class="image-container">
-                                <img src="img/4khdr.svg" alt="4khdr">
+                            <div class="image-container"><br>
+                              <Br>  <img src="img/4khdr.svg" alt="4khdr">
+                            </div>
                         </div>
                     </div>
                 </div>
