--- a/index.HTML
+++ b/index.HTML
@@ -190,6 +190,13 @@ padding-left: 10px;
             font-size: 1.5vw;
         }
 
+@media screen and (min-width: 769px) {
+    .biggest-text,
+    .medium-text {
+        max-width: 80%; /* Set maximum width for text elements */
+        margin: 0 auto; /* Center the text horizontally */
+    }
+
         .line-left,
         .line-right {
             flex: 1;
