--- a/index.HTML
+++ b/index.HTML
@@ -195,6 +195,7 @@ padding-left: 10px;
     .medium-text {
         max-width: 60%; /* Set maximum width for text elements */
         margin: 0 auto; /* Center the text horizontally */
+max-height: 100px;
     }
 
         .line-left,
