--- a/index.HTML
+++ b/index.HTML
@@ -369,10 +369,10 @@ padding-left: 10px;
                             <span class="line line-left"></span>
                             <p class="normal-text">€8.95 + TAX/MO</p>
                             <span class="line line-right"></span>
-                            <div class="image-container"><br>
-                              <Br>  <img src="img/4khdr.svg" alt="4khdr">
-                            </div>
                         </div>
+                    </div>
+                    <div class="image-container">
+                        <img src="img/4khdr.svg" alt="4khdr">
                     </div>
                 </div>
                 <video class="background-video" loop muted playsinline poster="img/poster.jpg">
