--- a/index.HTML
+++ b/index.HTML
@@ -182,7 +182,7 @@ padding-left: 10px;
         .line {
             height: 1px;
             background-color: white;
-            width: 45%;
+            flex: 1;
         }
 
         .normal-text-container {
@@ -196,17 +196,8 @@ padding-left: 10px;
 
         .line-left,
         .line-right {
-            flex: 1;
             height: 1px;
             background-color: white;
-        }
-
-        .line-left {
-            margin-right: 2vw;
-        }
-
-        .line-right {
-            margin-left: 2vw;
         }
 
         .normal-text {
@@ -279,13 +270,13 @@ padding-left: 10px;
     align-items: center;
 }
 .image-container {
-    width: 20%; /* Adjust the width as needed */
-    margin-left: auto;
-    margin-right: auto;
+    width: 100%; /* Adjust the width as needed */
+    margin-top: 20px; /* Adjust margin */
+    text-align: center; /* Center the image */
 }
 
 .image-container img {
-    width: 100%; /* Ensure the image fills its container */
+    width: 30%; /* Adjust image width */
     height: auto; /* Maintain aspect ratio */
 }
         .footer-link:hover {
