--- a/index.HTML
+++ b/index.HTML
@@ -77,7 +77,7 @@ padding-left: 10px;
             height: auto;
         }
   .background-video {
-            width: auto;
+            width: 100%;
             height: 80vh;
             max-width: none;
             max-height: none;
@@ -367,7 +367,7 @@ padding-left: 10px;
                     </div>
                 </div>
                 <video class="background-video" loop muted playsinline poster="img/poster.jpg">
-                    <source src="https://streamable.com/kxnuug" type="video/mp4">
+                    <source src="https://barebeach.co/images/join.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
             </div>
