--- a/index.HTML
+++ b/index.HTML
@@ -202,6 +202,7 @@ padding-left: 10px;
 
         .normal-text {
             font-size: 1.5vw;
+            margin-left: 10px; /* Adjust margin */
         }
 
         .price-icon {
