--- a/index.HTML
+++ b/index.HTML
@@ -359,7 +359,7 @@ padding-left: 10px;
                     <div class="lines">
                         <div class="normal-text-container">
                             <span class="line line-left"></span>
-                            <p class="normal-text">€8.95 + TAX/MO</p>
+                           <center> <p class="normal-text">€8.95 + TAX/MO</p></center>
                             <span class="line line-right"></span>
                         </div>
                     </div>
