--- a/index.HTML
+++ b/index.HTML
@@ -360,7 +360,7 @@ text-align: center;
                     <div class="lines">
                         <div class="normal-text-container">
                             <span class="line line-left"></span>
-                           <center> <p class="normal-text">€8.95 + TAX/MO</p></center>
+                            <h2 class="medium-text">€8.95 + TAX/MO</h2>
                             <span class="line line-right"></span>
                         </div>
                     </div>
