--- a/index.HTML
+++ b/index.HTML
@@ -274,6 +274,7 @@ text-align: center;
 .image-container {
     width: 100%; /* Adjust the width as needed */
     margin-top: 20px; /* Adjust margin */
+margin-buttom: 20px; /* Adjust margin */
     text-align: center; /* Center the image */
 }
 
