--- a/index.HTML
+++ b/index.HTML
@@ -271,11 +271,11 @@ text-align: center;
     display: flex;
     align-items: center;
 }
+
 .image-container {
     width: 100%; /* Adjust the width as needed */
-    margin-top: 20px; /* Adjust margin */
-margin-buttom: 20px; /* Adjust margin */
     text-align: center; /* Center the image */
+    margin-top: 1vw; /* Adjust margin */
 }
 
 .image-container img {
