--- a/index.HTML
+++ b/index.HTML
@@ -361,7 +361,8 @@ text-align: center;
                     <div class="lines">
                         <div class="normal-text-container">
                             <span class="line line-left"></span>
-                            <h2 class="medium-text">€8.95 + TAX/MO</h2>
+                            <h4> class="medium-text">€8.95 + TAX/MO</h4>
+  <span class="line line-right"></span>
                              <div class="image-container">
                         <img src="img/4khdr.svg" alt="4khdr">
                     </div>
