--- a/index.HTML
+++ b/index.HTML
@@ -332,6 +332,11 @@ text-align: center;
     opacity: 0.7;
     padding-left: 20px; /* Add padding-left */
 }
+@media screen and (max-width: 768px) {
+    .footer-logo img {
+        width: 50px; /* Adjust the width for smaller screens */
+    }
+}
 
 /* Responsive styles */
 @media screen and (max-width: 768px) {
