--- a/index.HTML
+++ b/index.HTML
@@ -140,7 +140,7 @@ padding-left: 10px;
     box-shadow: 0 0 30px #002d6a, 0 0 20px #002d6a inset;
     max-width: 100%; /* Ensure the container adjusts to the viewport */
     height: auto; /* Allow the container to adjust its height based on content */
-    margin-left: auto; /* Center horizontally */
+    margin-left: 20px;
     margin-right: auto; /* Center horizontally */
 }
 @media screen and (min-width: 769px) {
