--- a/index.HTML
+++ b/index.HTML
@@ -105,6 +105,9 @@ padding-left: 10px;
     }
     .round-container {
         width: 100%; /* Adjusted width for larger screens */
+   margin-left: auto; /* Add margin to the left for mobile */
+        margin-right: auto; /* Center horizontally */
+    }
     }
 }
 
