--- a/index.HTML
+++ b/index.HTML
@@ -103,12 +103,8 @@ padding-left: 10px;
     .container {
         width: 70%; /* Adjusted width for larger screens */
     }
-@media screen and (max-width: 768px) {
     .round-container {
-        width: 100%; /* Adjusted width for smaller screens */
-        margin: 0 auto; /* Center horizontally */
-    }
-}
+        width: 100%; /* Adjusted width for larger screens */
     }
 }
 
